# openvpn-cred-management

./: Cargo.toml  README.md  openvpn-cred-management.rpkg.spec  openvpn-cred-management.spec.rpkg
src/: action.rs  cli.rs  config.rs  main.rs  types.rs
src/action/: shared.rs
