[package]
name = "openvpn-cred-management"
description = "A wrapper around easy-rsa for personal convenience."
edition = "2021"
publish = false

[[bin]]
name = "ocm"
path = "src/main.rs"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive", "cargo"] }
clap-verbosity-flag = "3.0.4"
clap_complete = "4.5.59"
color-eyre = "0.6.5"
derive_more = { version = "2.0.1", features = ["deref", "display"] }
directories = "6.0.0"
documented = "0.9.2"
fs-more = "0.8.1"
humantime = "2.3.0"
itertools = "0.14.0"
log = "0.4.28"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.1"
simplelog = "0.12.2"
strum = { version = "0.27.2", features = ["derive"] }
temp-dir = "0.1.16"
toml_edit = { version = "0.22.27", features = ["serde"] }
xshell = "0.3.0-pre.2"
zip = "3.0.0"
zip-extensions = "0.8.3"
